--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,10 @@ display: flex;
   justify-content: space-between;
 }
 .controlIcon {
-  cursor: pointer;
+  
+}
+.info {
+  display: flex;
 }
 
 .controls button {
@@ -27,37 +30,84 @@ display: flex;
   margin-top: 10px;
 }
 
-.remoteStreamContainer {
+.rightContainer {
   margin-left: 50px;
+  flex: 1 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.remoteStreamContainer {
   flex: 1;
   display: flex;
   flex-wrap: wrap;
 }
 .remoteStreamItem {
   position: relative;
-  position: relative;
-  border: 1px solid #eee;
-  margin-bottom: 20px;
-  margin-right: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* border: 1px solid #eee; */
+  margin: 10px;
 }
 .controls {
   padding: 10px;
     background-color: #eee;
 }
+.tuteControls {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 2px;
+  z-index: 5;
+}
+.tuteControls button {
+  width: 45%;
+}
 .join {
   width: 100%;
     height: 40px;
 }
-.id {
+.input {
+  height: 26px;
 }
 .remoteStream {
-  height: 150px;
-  width: 150px;
-  margin: 20px;
+  height: 250px;
+  width: 250px;
+  position: relative;
   border: 2px solid #eee;
   border-radius: 10px;
   overflow: hidden;
-  animation: amin 0.4s;
+  animation: amin 0.4s; 
+  transition: all 0.3s;
+}
+
+.rmtControls {
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  box-sizing: border-box;
+  z-index: 5;
+  padding: 2px 10px;
+  background-color: #fff;
+}
+.speakerIcon {
+  z-index: 5;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+.speaking {
+  border: 2px solid brown;
+  height: 300px;
+  width: 300px;
+}
+.sicon {
+  height: 30px;
+    width: 20px;
+    overflow: hidden;
 }
 
 @keyframes amin {
