--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,15 @@ display: flex;
   border: 1px solid gray;
   border-radius: 10px;
   overflow: hidden;
+  margin-left: 12px;
 }
 
 .controls {
   display: flex;
-  justify-content: space-between;
+
+  justify-content: space-evenly;
 }
-.controlIcon {
-  
-}
+
 .info {
   display: flex;
 }
@@ -50,9 +50,10 @@ display: flex;
   /* border: 1px solid #eee; */
   margin: 10px;
 }
+   
 .controls {
   padding: 10px;
-    background-color: #eee;
+  background-color: white;
 }
 .tuteControls {
   display: flex;
@@ -67,13 +68,15 @@ display: flex;
 .join {
   width: 100%;
     height: 40px;
+    margin-left: 12px;;
 }
 .input {
   height: 26px;
+  margin-left: 12px;
 }
 .remoteStream {
-  height: 250px;
-  width: 250px;
+  height: 200px;
+  width: 200px;
   position: relative;
   border: 2px solid #eee;
   border-radius: 10px;
@@ -86,7 +89,7 @@ display: flex;
   position: absolute;
   bottom: 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   box-sizing: border-box;
   z-index: 5;
@@ -117,4 +120,44 @@ display: flex;
   100% {
       transform: scale(1);
   }
+}
+
+.MuiSvgIcon-fontSizeLarge {
+  font-size: 2.1875rem;
+  position: absolute;
+  background-color: grey;
+  height: 30px;
+  width: 30px;
+  border-radius: 60px;
+  margin-top: -50px;
+  margin-left: -4px;
+  color: white;
+  
+}
+
+.MuiSvgIcon-fontSizeSmall {
+  font-size: 2.1875rem;
+  position: absolute;
+  background-color: grey;
+  height: 30px;
+  width: 30px;
+  border-radius: 60px;
+  margin-top: -50px;
+  margin-left: -4px;
+  color: white;
+}
+
+.right {
+  width: 50%;
+  height: 100px;
+  float: left;
+  background: white;
+}
+.left {
+  margin-left: 50%;
+  height: 100px;
+  background: white;
+}
+.box {
+  width: 100%;
 }
