pin/unpin logic

--- a/src/Components/Chat/Styles/ChatMesageViewCardStyles.css
+++ b/src/Components/Chat/Styles/ChatMesageViewCardStyles.css
@@ -14,6 +14,9 @@
   width: 36px;
   height: 36px;
   margin-right: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center
 }
 .chatCard {
   display: flex;
