--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@ display: flex;
   flex-direction: column;
 }
 #localView {
-  height: 150px;
-  width: 150px;
+ height: 100%;
+  width: 100%;
   border: 1px solid gray;
   border-radius: 10px;
   overflow: hidden;
@@ -49,6 +49,9 @@ display: flex;
 }
 .remoteStreamItem {
   position: relative;
+  width: 190px;
+  height: 169px;
+  position: relative;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -79,13 +82,14 @@ display: flex;
 }
 .remoteStream {
   height: 200px;
-  width: 200px;
+  width: 100%;
   position: relative;
   border: 2px solid #eee;
   border-radius: 10px;
   overflow: hidden;
   animation: amin 0.4s; 
   transition: all 0.3s;
+  box-sizing: border-box;
 }
 
 .rmtControls {
@@ -130,7 +134,7 @@ display: flex;
   }
 }
 
-.MuiSvgIcon-fontSizeLarge {
+/*.MuiSvgIcon-fontSizeLarge {
   font-size: 2.1875rem;
   position: absolute;
   background-color: grey;
@@ -141,9 +145,9 @@ display: flex;
   margin-left: -4px;
   color: white;
   
-}
+}*/
 
-.MuiSvgIcon-fontSizeSmall {
+/*MuiSvgIcon-fontSizeSmall {
   font-size: 2.1875rem;
   position: absolute;
   background-color: grey;
@@ -153,7 +157,7 @@ display: flex;
   margin-top: -50px;
   margin-left: -4px;
   color: white;
-}
+}*/
 
 .right {
   width: 50%;
