--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,46 @@
 .App {
-padding: 30px;
-flex: 1;
-display: flex;
-}
+  padding: 30px;
+  flex: 1;
+  display: flex; }
+
 .localStreamContainer {
   width: 150px;
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
+
 #localView {
- height: 100%;
+  height: 100%;
   width: 100%;
   border: 1px solid gray;
   border-radius: 10px;
   overflow: hidden;
-  /*margin-left: 12px;*/
-}
+  /*margin-left: 12px;*/ }
+
 .cursor {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .controls {
   display: flex;
-
-  justify-content: space-evenly;
-}
+  justify-content: space-evenly; }
 
 .info {
-  display: flex;
-}
+  display: flex; }
 
 .controls button {
   height: 50px;
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 .rightContainer {
   margin-left: 50px;
   display: flex;
   flex-direction: column;
-  width: 40vw;
-}
+  width: 40vw; }
 
 .remoteStreamContainer {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
-}
+  align-items: flex-start; }
+
 .remoteStreamItem {
   position: relative;
   width: 190px;
@@ -56,30 +50,29 @@ display: flex;
   justify-content: center;
   flex-direction: column;
   /* border: 1px solid #eee; */
-  margin: 10px;
-}
-   
+  margin: 10px; }
+
 .controls {
   padding: 10px;
-  background-color: white;
-}
+  background-color: white; }
+
 .tuteControls {
   display: flex;
   justify-content: space-between;
   width: 100%;
   margin-top: 2px;
-  z-index: 5;
-}
+  z-index: 5; }
+
 .tuteControls button {
-  width: 45%;
-}
+  width: 45%; }
+
 .join {
   width: 100%;
-  height: 40px;
-}
+  height: 40px; }
+
 .input {
-  height: 26px;
-}
+  height: 26px; }
+
 .remoteStream {
   height: 200px;
   width: 100%;
@@ -87,10 +80,9 @@ display: flex;
   border: 2px solid #eee;
   border-radius: 10px;
   overflow: hidden;
-  animation: amin 0.4s; 
+  animation: amin 0.4s;
   transition: all 0.3s;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 .rmtControls {
   position: absolute;
@@ -106,33 +98,29 @@ display: flex;
   background-color: #fff;
   background: #DFE6EC;
   border-radius: 8px;
-  padding: 8px;
-}
+  padding: 8px; }
+
 .speakerIcon {
   z-index: 5;
   position: absolute;
   left: 10px;
-  top: 10px;
-}
+  top: 10px; }
+
 .speaking {
   border: 2px solid brown;
   height: 300px;
-  width: 300px;
-}
+  width: 300px; }
+
 .sicon {
   height: 30px;
-    width: 20px;
-    overflow: hidden;
-}
+  width: 20px;
+  overflow: hidden; }
 
 @keyframes amin {
   0% {
-    transform: scale(0.5);
-  }
+    transform: scale(0.5); }
   100% {
-      transform: scale(1);
-  }
-}
+    transform: scale(1); } }
 
 /*.MuiSvgIcon-fontSizeLarge {
   font-size: 2.1875rem;
@@ -146,7 +134,6 @@ display: flex;
   color: white;
   
 }*/
-
 /*MuiSvgIcon-fontSizeSmall {
   font-size: 2.1875rem;
   position: absolute;
@@ -158,26 +145,25 @@ display: flex;
   margin-left: -4px;
   color: white;
 }*/
-
 .right {
   width: 50%;
   height: 100px;
   float: left;
-  background: white;
-}
+  background: white; }
+
 .left {
   margin-left: 50%;
   height: 100px;
-  background: white;
-}
+  background: white; }
+
 .box {
   display: flex;
   width: 100vw;
   height: 100vh;
   flex-direction: row;
   padding: 16px;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
 .slides-container {
   display: flex;
   padding: 10px;
@@ -189,27 +175,25 @@ display: flex;
   max-width: 100%;
   height: 80vh;
   flex: 1;
-  position: relative;
+  position: relative; }
 
-}
 .slides-container > .btn-next-prev {
   position: absolute;
   bottom: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-}
+  width: 100%; }
+
 .slides-container > .btn-next-prev button {
   width: 36px;
   height: 36px;
   cursor: pointer;
-  margin: 10px;
-}
+  margin: 10px; }
+
 .slides-container > .slide-img {
   width: 100%;
   padding-bottom: 75%;
   background: gold;
   background-repeat: no-repeat;
-  background-size: cover
-}
+  background-size: cover; }
