--- a/src/Assets/Fonts/index.css
+++ b/src/Assets/Fonts/index.css
@@ -1,3 +1,7 @@
 @font-face {
   font-family: 'Nunito-SemiBold';
   src: url("./Nunito/Nunito-SemiBold.ttf"); }
+
+@font-face {
+  font-family: 'Nunito-Regular';
+  src: url("./Nunito/Nunito-Regular.ttf"); }
