--- a/src/Assets/Fonts/index.scss
+++ b/src/Assets/Fonts/index.scss
@@ -4,10 +4,10 @@
   src: url('./Nunito/Nunito-SemiBold.ttf');
 }
 
-// @font-face {
-//   font-family: 'Gotham-Bold';
-//   src: url('./Gotham-Bold.otf');
-// }
+@font-face {
+  font-family: 'Nunito-Regular';
+  src: url('./Nunito/Nunito-Regular.ttf');
+}
 
 // @font-face {
 //   font-family: 'Gotham-Light';
