--- a/src/App.css
+++ b/src/App.css
@@ -30,27 +30,10 @@
   height: 50px;
   margin-top: 10px; }
 
-.rightContainer {
-  margin-left: 50px;
-  display: flex;
-  flex-direction: column;
-  width: 40vw; }
-
 .remoteStreamContainer {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start; }
-
-.remoteStreamItem {
-  position: relative;
-  width: 190px;
-  height: 169px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  /* border: 1px solid #eee; */
-  margin: 10px; }
 
 .controls {
   padding: 10px;
@@ -82,6 +65,14 @@
   overflow: hidden;
   animation: amin 0.4s;
   transition: all 0.3s;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  border: 1px solid gray;
+  border-radius: 10px;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
   box-sizing: border-box; }
 
 .rmtControls {
