--- a/src/Components/AppDashboard/Styles/DashboardStyles.css
+++ b/src/Components/AppDashboard/Styles/DashboardStyles.css
@@ -1,3 +1,17 @@
-.app-container {
-  height: 100vh;
-  max-height: 100vh; }
+.app-container .main-card {
+  display: flex;
+  width: 100%;
+  margin-bottom: 10px; }
+  .app-container .main-card .rightContainer {
+    display: flex;
+    width: 100%;
+    max-width: 100%;
+    flex-wrap: wrap;
+    max-height: 100%;
+    overflow-y: auto;
+    isplay: flex;
+    width: 100%;
+    max-width: 100%;
+    flex-wrap: wrap;
+    max-height: 100%;
+    overflow-y: auto; }
