--- a/src/Components/Chat/Styles/ChatCardStyles.css
+++ b/src/Components/Chat/Styles/ChatCardStyles.css
@@ -8,7 +8,9 @@
   justify-content: space-between;
   flex-direction: column;
   padding: 0 8px 8px;
-  height: 100%; }
+  height: 100%;
+  flex: 1;
+  min-width: 330px; }
 
 .chatMessageView {
   display: flex;
