--- a/src/Components/Chat/Styles/ChatCardStyles.scss
+++ b/src/Components/Chat/Styles/ChatCardStyles.scss
@@ -9,6 +9,8 @@
   flex-direction: column;
   padding: 0 8px 8px;  
   height: 100%;
+  flex:1;
+  min-width: 330px;
 }
 .chatMessageView {
   display: flex;
