--- a/src/Components/Styles/RemoteStreamStyle.scss
+++ b/src/Components/Styles/RemoteStreamStyle.scss
@@ -12,6 +12,18 @@
   
   border-radius: 27.4286px;
 }
+
+.remoteStreamItem {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px;
+}
+
 .controlsGroup:hover {
   background: rgba(199, 211, 220, 0.9);
 }
