--- a/src/Containers/Teacher/Styles/TeacherSyles.css
+++ b/src/Containers/Teacher/Styles/TeacherSyles.css
@@ -1,25 +1,35 @@
-.teacher-container {
+body {
+  margin: 0;
+  box-sizing: border-box; }
+
+.app-main-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: row;
+  height: calc(100vh - 64px);
+  padding-top: 24px;
+  padding-bottom: 8px;
+  box-sizing: border-box; }
+  .app-main-container .chatContainer {
+    margin-left: 12px;
+    margin-right: 12px; }
+  .app-main-container .right-container {
+    display: flex;
+    height: 100%;
+    flex: 1;
+    flex-direction: column; }
+    .app-main-container .right-container .class-container {
+      display: flex;
+      height: calc(100% - 64px); }
+    .app-main-container .right-container .footer-card {
+      display: flex; }
 
-.header {
-  display: flex;
-  align-items: center;
-  padding: 8px;
-  /*border-bottom: 1px solid #ccc;*/
-  justify-content: flex-end;
-  margin-bottom: 10px;
-  background-color: #dfe6ec; }
+.app-main-container.startSession .right-container {
+  flex-direction: row; }
 
-.btn-card {
-  height: 40px;
-  margin-left: 10px;
-  cursor: pointer; }
+.app-main-container.startSession .video-container, .app-main-container.startSession .remoteStreamItem {
+  width: 200px;
+  height: 200px; }
 
-.main-container {
-  display: flex;
-  min-height: calc(100vh - 40px);
-  padding: 16px; }
-
-.chatBox {
-  height: 70vh; }
+.app-main-container.startSession .class-container {
+  width: 45vw;
+  height: 100%; }
