--- a/src/Containers/Teacher/Styles/TeacherSyles.scss
+++ b/src/Containers/Teacher/Styles/TeacherSyles.scss
@@ -1,26 +1,43 @@
-.teacher-container {
-  display: flex;
-  flex-direction: column;
-}
-.header {
-  display: flex;
-  align-items: center;
-  padding: 8px;
-  /*border-bottom: 1px solid #ccc;*/
-  justify-content: flex-end;
-  margin-bottom: 10px;
-  background-color: #dfe6ec;
-}
-.btn-card {
-  height: 40px;
-  margin-left: 10px;
-  cursor: pointer;
-}
-.main-container {
-  display: flex;
-  min-height: calc(100vh - 40px);
-  padding: 16px;
-}
-.chatBox {
-  height: 70vh;
+@import '../../Styles/LayoutStyles.scss';
+// .teacher-container {
+//   display: flex;
+//   flex-direction: column;
+// }
+// .header {
+//   display: flex;
+//   align-items: center;
+//   padding: 8px;
+//   /*border-bottom: 1px solid #ccc;*/
+//   justify-content: flex-end;
+//   margin-bottom: 10px;
+//   background-color: #dfe6ec;
+// }
+// .btn-card {
+//   height: 40px;
+//   margin-left: 10px;
+//   cursor: pointer;
+// }
+// .main-container {
+//   display: flex;
+//   min-height: calc(100vh - 40px);
+//   padding: 16px;
+// }
+// .chatBox {
+//   height: 70vh;
+// }
+
+.app-main-container {
+  &.startSession {
+    .right-container {
+      flex-direction: row;
+    }
+    .video-container, .remoteStreamItem {
+      width: 200px;
+      height: 200px;
+    }
+    .class-container {
+      width: 45vw;
+      height: 100%;
+    }
+  }
 }
