switching on Start Session and ice breaking layout

--- a/src/Components/Common/VideoCard/Styles/VideoCardStyle.css
+++ b/src/Components/Common/VideoCard/Styles/VideoCardStyle.css
@@ -30,3 +30,9 @@
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
     box-sizing: border-box; }
+  .video-container .video-control {
+    position: absolute;
+    bottom: 8px;
+    display: flex; }
+    .video-container .video-control .btn-circle {
+      border-radius: 100%; }
