--- a/src/Components/AppDashboard/Styles/DashboardStyles.css
+++ b/src/Components/AppDashboard/Styles/DashboardStyles.css
@@ -1,7 +1,8 @@
 .app-container .main-card {
   display: flex;
   width: 100%;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  align-items: flex-start; }
   .app-container .main-card .rightContainer {
     display: flex;
     width: 100%;
