--- a/src/Components/AppDashboard/Styles/DashboardStyles.scss
+++ b/src/Components/AppDashboard/Styles/DashboardStyles.scss
@@ -10,6 +10,7 @@
       display: flex;
       width: 100%;
       margin-bottom: 10px;
+      align-items: flex-start;
       .rightContainer{
         display: flex;
         width: 100%;
