--- a/src/Components/Teacher/SessionPlanCard/Styles/SessionPlanCardStyle.css
+++ b/src/Components/Teacher/SessionPlanCard/Styles/SessionPlanCardStyle.css
@@ -1,5 +1,39 @@
-.SessionPlanCard-container {
+.sessionPlanCard-container {
   background: #FCFCFC;
   box-shadow: 0px 2px 8px rgba(166, 166, 166, 0.25);
   border-radius: 6px;
   width: 55vw; }
+  .sessionPlanCard-container .sessionPlanCard-item {
+    height: calc(100% / 2 - 56px/2 - 16px);
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    background: #FCFCFC;
+    border-radius: 6px; }
+    .sessionPlanCard-container .sessionPlanCard-item .video-container {
+      position: absolute;
+      right: 0;
+      z-index: 23; }
+    .sessionPlanCard-container .sessionPlanCard-item.videoProfile .video-container {
+      padding: 8px;
+      width: 100%;
+      height: 100%;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0; }
+      .sessionPlanCard-container .sessionPlanCard-item.videoProfile .video-container .video-remoteStream {
+        background: #E0E7EC;
+        border-radius: 2.23378px; }
+      .sessionPlanCard-container .sessionPlanCard-item.videoProfile .video-container .video-control {
+        bottom: 23px; }
+  .sessionPlanCard-container .sessionPlanCard-chat-item .chatContainer {
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: unset; }
+  .sessionPlanCard-container .bn-selected {
+    color: #FFA724; }
