--- a/src/Components/AppHeader/Styles/AppHeaderStyles.css
+++ b/src/Components/AppHeader/Styles/AppHeaderStyles.css
@@ -8,6 +8,7 @@
   .app-header .btn-card {
     display: flex;
     flex: 1;
+    width: 100%;
     justify-content: flex-end;
     padding: 12px 24px;
     border-radius: 24px;
