--- a/src/Containers/WaitingRoom/styles.css
+++ b/src/Containers/WaitingRoom/styles.css
@@ -9,7 +9,6 @@
   width: 100%;
   left: 0px;
   top: 0px;
-  border-radius: [object Object] px;
   right: 0%;
   top: 0%;
   bottom: 89.86%;
@@ -35,7 +34,7 @@
   box-shadow: 0px 2px 6px rgba(228, 119, 98, 0.2), 0px 4px 14px #eeeeee, inset 1px 0px 3px rgba(237, 237, 237, 0.5);
   border-radius: 12px; }
 
-.waitimg {
+.waiting {
   position: absolute;
   width: 413px;
   height: 310px;
@@ -48,7 +47,7 @@
   height: 22px;
   left: 212px;
   top: -50px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -69,7 +68,7 @@
   height: 22px;
   left: 333px;
   top: -50px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -83,7 +82,7 @@
   height: 61px;
   left: 30px;
   top: 20px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 45px;
@@ -96,7 +95,7 @@
   height: 22px;
   left: 30px;
   top: 83px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -130,7 +129,7 @@
 .hour {
   position: absolute;
   margin-top: -46px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   margin-left: 26px;
@@ -145,7 +144,7 @@
 .mins {
   position: absolute;
   margin-top: -46px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   margin-left: 108px;
@@ -160,7 +159,7 @@
 .secs {
   position: absolute;
   margin-top: -46px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   margin-left: 182px;
@@ -173,7 +172,7 @@
   mix-blend-mode: normal; }
 
 .container-text2 {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
@@ -191,7 +190,7 @@
   height: 13.75px;
   margin-left: 22px;
   margin-top: -16px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
@@ -206,7 +205,7 @@
   height: 13.75px;
   margin-left: 104px;
   margin-top: -16px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
@@ -221,7 +220,7 @@
   height: 13.75px;
   margin-left: 180px;
   margin-top: -16px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
@@ -236,7 +235,7 @@
   height: 66px;
   left: 36px;
   top: 297px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
