--- a/src/Containers/WaitingRoom/styles.scss
+++ b/src/Containers/WaitingRoom/styles.scss
@@ -9,7 +9,6 @@
   width: 100%;
   left: 0px;
   top: 0px;
-  border-radius: [object Object]px;
   right: 0%;
   top: 0%;
   bottom: 89.86%;
@@ -37,7 +36,7 @@
     inset 1px 0px 3px rgba(237, 237, 237, 0.5);
   border-radius: 12px;
 }
-.waitimg {
+.waiting {
   position: absolute;
   width: 413px;
   height: 310px;
