--- a/src/Containers/WaitingRoom/styles.css
+++ b/src/Containers/WaitingRoom/styles.css
@@ -47,7 +47,7 @@
   height: 22px;
   left: 212px;
   top: -50px;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Nunito-Regular';
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -68,7 +68,7 @@
   height: 22px;
   left: 333px;
   top: -50px;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Nunito-Regular';
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
