--- a/src/Containers/WaitingRoom/styles.scss
+++ b/src/Containers/WaitingRoom/styles.scss
@@ -49,7 +49,7 @@
   height: 22px;
   left: 212px;
   top: -50px;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Nunito-Regular';
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -70,7 +70,7 @@
   height: 22px;
   left: 333px;
   top: -50px;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Nunito-Regular';
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
