--- a/src/Assets/Fonts/index.css
+++ b/src/Assets/Fonts/index.css
@@ -5,3 +5,10 @@
 @font-face {
   font-family: 'Nunito-Regular';
   src: url("./Nunito/Nunito-Regular.ttf"); }
+
+ @font-face {
+  font-family: 'Nunito-Bold';
+  src: url("./Nunito/Nunito-Bold.ttf"); }
+
+body {
+  margin: 0; }
